-Allow to Format, Browse and Chkdsk an Hilow DataDrive image (.ddh file)
-Allow to convert audio from a real Hilow DataDrive tape to an image file (.ddh)
-Added technical documentation on the extras package


Fixed handling files larger than 2 GB on 32 bit CPU (including the Windows version too)
Fixed using mmc images larger than 2 GB
Fixed redrawing ZX Desktop when resizing window
Fixed bug that may crash ZEsarUX when starting machine ZX Spectrum +2 Spanish. This is a bug that has always existed.
Fixed Z80 behavior after EI or DD/FD prefixes and interrupts
Fixed Z80 behavior running block opcodes (LDIR, etc) and interrupts
Fixed .Z80 Timex TS2068 snapshot loading
Fixed showing Recent Files when file name contains character %
Fixed HiLow DataDrive emulation
Fixed crash (stack smashing detected) when showing Debug CPU window (and compiled using -fstack-protector)
Fixed segfault when starting ZEsarUX + disabled welcome splash message + enabled reopen windows on start setting + no window to restore
Fixed trap print numbers on Spectrum and ZX81 (setting --chardetectcompatnum)
Fixed segfault when selecting an invalid file type on real tape
Fixed Keyboard Help image for Spectravideo 318
Fixed allowed machines when saving snapshots .ZX
Fixed Breakpoints actions: now are executed everywhere (even in the menu)
Fixed pressing key c (continuous mode) on debug cpu (emulation was unpaused temporarily)
Fixed TZX turbo files extract (including screen previews), convert & file info
Fixed .Z80 and .ZSF screen previews when using 128k screen page 7
Fixed .DSK extract 
Fixed crash when saving .ZSF snapshots when a byte DD is found just before a byte is repeated more than 256 times

Fixed ZX Vision:
-Fixed showing cursor on edit fields and text length longer than visible


Some other minor bugfixes and improvements



Version 10.1 - Carrier Command edition. 06 May 2022

Added real joystick support on Mac
Added joystick support for Hat controllers